# Pothole-Detection-System

./: README.md
potholes-backend/potholes-backend/: .dockerignore  Dockerfile  README.md  database.py  inference.py  main.py  migrate_db.py  models.py  plot_architecture.py  plot_data.py  plot_training.py  plot_workflow.py  potholes.db  pyproject.toml  requirements.txt  yolo.ipynb
potholes-backend/potholes-backend/routers/: auth.py  potholes.py
potholes-backend/potholes-backend/uploads/: download.jfif
potholes-backend/potholes-backend/working/: dataset.yaml  dataset_split.json
potholes-backend/potholes-backend/working/labels/: img-1.txt  img-101.txt  img-106.txt  img-108.txt  img-109.txt  img-11.txt  img-112.txt  img-113.txt  img-121.txt  img-123.txt  img-124.txt  img-130.txt  img-133.txt  img-134.txt  img-135.txt  img-136.txt  img-137.txt  img-14.txt  img-140.txt  img-142.txt  img-144.txt  img-148.txt  img-15.txt  img-150.txt  img-154.txt  img-156.txt  img-157.txt  img-162.txt  img-164.txt  img-165.txt  img-166.txt  img-167.txt  img-168.txt  img-169.txt  img-17.txt  img-172.txt  img-173.txt  img-174.txt  img-176.txt  img-179.txt  (+302 more)
potholes-backend/potholes-backend/working/runs/yolov8m_pothole_train/: args.yaml  results.csv
potholes-backend/potholes-backend/working/test/: labels.cache
potholes-backend/potholes-backend/working/test/labels/: img_10.txt  img_118.txt  img_120.txt  img_131.txt  img_132.txt  img_155.txt  img_158.txt  (+66 more)
potholes-backend/potholes-backend/working/train/: labels.cache
potholes-backend/potholes-backend/working/val/: labels.cache
(+303 files in other folders)
